# cs430-proj4-raycaster

./: .gitignore  CMakeLists.txt  README.md  makefile
src/c/: color.c  helpers.c  image.c  interpolate.c  json.c  list.c  main.c  ppm.c  raycast.c  scene.c
src/headers/: color.h  helpers.h  image.h  interpolate.h  json.h  ppm.h  ppm_header.h  raycast.h  scene.h  vec.h
test_files/: out.ppm  provided.json  rand_scene.json  scene_gen.py  solar.json  solar.py  test.sh  test_animated_scene.json  test_illuminated.json  test_illuminated_animated.json  test_scene.json
test_files/frames/: out-01.ppm  out-02.ppm  out-03.ppm  out-04.ppm  out-05.ppm  out-06.ppm  out-07.ppm  out-08.ppm  out-09.ppm  out-10.ppm  out-11.ppm
